--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "amy-portfolio",
   "version": "0.1.0",
-  "homepage": "https://vuamydev.com/",
+  "homepage": "https://vuamy.github.io/amy-portfolio",
   "private": false,
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.5",
@@ -15,7 +15,7 @@
   },
   "scripts": {
     "predeploy": "npm run build",
-    "deploy": "gh-pages -d build",
+    "deploy": "gh-pages -b master -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
